src/quicktemplates2/qquickpopup.cpp
@@ -451,10 +451,11 @@ bool QQuickPopupPrivate::prepareExitTransition()
     if (transitionState == ExitTransition && transitionManager.isRunning())
         return false;
 
-    if (transitionState != ExitTransition && !hadActiveFocusBeforeExitTransition) {
+    if (transitionState != ExitTransition) {
         // The setFocus(false) call below removes any active focus before we're
         // able to check it in finalizeExitTransition.
-        hadActiveFocusBeforeExitTransition = popupItem->hasActiveFocus();
+        if (!hadActiveFocusBeforeExitTransition)
+            hadActiveFocusBeforeExitTransition = popupItem->hasActiveFocus();
         if (focus)
             popupItem->setFocus(false);
         transitionState = ExitTransition;
